--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <a id="self-introduction" class="anchor" href="#self-introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Self Introduction</h3>
 
 <p>My name is Xiaoqiang Geng, a student of GuiZhou University!</p>
+<img src="image/mm.jpg" alt="photo">
 <p>汉语也可以啊！<p>
 
 <h3>
