--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <a id="self-introduction" class="anchor" href="#self-introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Self Introduction</h3>
 
 <p>My name is Xiaoqiang Geng, a student of GuiZhou University!</p>
+<p>Come on baby！介绍个美女<p>
 <img src="images/mm.jpg" alt="photo">
-<p>汉语也可以啊！<p>
 
 <h3>
 <a id="well-let-me-see-what-should-i-say" class="anchor" href="#well-let-me-see-what-should-i-say" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Well! Let me see what should I say...</h3>
