--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Qiangzaio.GitHub.com by qiangzaizaiO</title>
+    <title>Qiangzai's personal pages!</title>
   </head>
 
   <body>
