--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Qiangzaio.GitHub.com</h1>
+            <h1>Qiangzai's personal pages!</h1>
             <h2>My personal pages</h2>
           </span>
           <span class="left-tail"></span>
