--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  <div id="container" style="width:500px;float:right">
  
 <div id="header" style="background-color:#FFA500;">
-<h1 style="margin-bottom:0;">主要的网页标题</h1></div>
+<h1 style="margin-bottom:0;">标题</h1></div>
  
 <div id="menu" style="background-color:#FFD700;height:200px;width:100px;float:left;">
 <b>菜单</b><br>
@@ -89,7 +89,7 @@ CSS<br>
 JavaScript</div>
  
 <div id="content" style="background-color:#EEEEEE;height:200px;width:400px;float:left;">
-内容在这里</div>
+内容</div>
  
 <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
 版权 © runoob.com</div>
