--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     
- <div id="container" style="width:500px;float:right">
+ <div id="container" style="width:500px;float:center">
  
 <div id="header" style="background-color:#FFA500;">
 <h1 style="margin-bottom:0;">标题</h1></div>
