--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  <div id="container" style="width:500px;float:center">
  
 <div id="header" style="background-color:#FFA500;">
-<h1 style="margin-bottom:0;">标题</h1></div>
+<h1 style="margin-bottom:0;">我的标题</h1></div>
  
 <div id="menu" style="background-color:#FFD700;height:200px;width:100px;float:left;">
 <b>菜单</b><br>
