--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <p>My name is Xiaoqiang Geng, a student of GuiZhou University!</p>
 <p>Come on baby！介绍个美女<p>
-<p><img src="images/mm.jpg" alt="photo" width="228" height="304"><p>
+<img src="images/mm.jpg" alt="photo" width="228" height="304">
 
 <h3>
 <a id="well-let-me-see-what-should-i-say" class="anchor" href="#well-let-me-see-what-should-i-say" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Well! Let me see what should I say...</h3>
@@ -77,7 +77,7 @@
     </div>
 
     
- <div id="container" style="width:500px;float:center">
+<!--  <div id="container" style="width:500px;float:center">
  
 <div id="header" style="background-color:#FFA500;">
 <h1 style="margin-bottom:0;">我的标题</h1></div>
@@ -94,7 +94,7 @@ JavaScript</div>
 <div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
 版权 © runoob.com</div>
  
-</div>
+</div> -->
     
   </body>
   
