--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <p>My name is Xiaoqiang Geng, a student of GuiZhou University!</p>
 <p>Come on baby！介绍个美女<p>
-<p><img src="images/mm.jpg" alt="photo" width="228" height="304"></p>
+<p><img src="images/mm.jpg" alt="photo" align="middle" width="228" height="304"></p>
 
 <h3>
 <a id="well-let-me-see-what-should-i-say" class="anchor" href="#well-let-me-see-what-should-i-say" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Well! Let me see what should I say...</h3>
