--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <a id="self-introduction" class="anchor" href="#self-introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Self Introduction</h3>
 
 <p>My name is Xiaoqiang Geng, a student of GuiZhou University!</p>
-<p>Come on baby！介绍个美女<p>
+<p onclick="alert('接着看!')">Come on baby！介绍个美女</p>
 <p><img src="images/mm.jpg" alt="photo" margin=auto width="228" height="304" onclick="alert('Thankyou!')"></p>
 
 <h3>
